<resources>
    <string name="app_name">BikeCourier</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_trace">TraceActivity</string>

    <string name="delete_message">"Are you sure you want to delete this entry?"</string>
    <string name="delele_title">Delete entry</string>
    <string name="empty_list_view">No trainings</string>

    <string name="maxspeed">Maximum speed:</string>
    <string name="avgspeed">Average speed:</string>
    <string name="distance">Distance:</string>
    <string name="duration">Duration:</string>
    <string name="time">Time:</string>
    <string name="none">none</string>

    <string name="no_entry_info">No location marks for this trace</string>
    <string name="start_service">Starting service</string>
    <string name="stop_service">Stopping service</string>
    <string name="stop_tracking">Tracking stopped</string>
    <string name="start_tracking">Tracking started</string>
    <string name="location_rationale">You need location permission to use this application</string>
    <string name="title_settings_permission_dialog">Location permission request</string>
    <string name="tracking_rationale">You need to run the service first.</string>
    <string name="delete_rationale">You cannot delete the current training.</string>
    <string name="service_running">Service running</string>
    <string name="google_play_services_not_available">Google Play Services not available. Service stopped.</string>
    <string name="exit_message">Do you want to stop background service? It will stop the current tracking.</string>
    <string name="exit_title">Exit background service</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="graph_speed_title">Speed</string>
    <string name="speed_title_axis_x">Time in seconds</string>
    <string name="speed_title_axis_y">Speed in km/h</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_description_start_service">Background service runs immediately after starting the application</string>
    <string name="pref_title_start_service">Run service on start</string>
    <string name="pref_title_mininum_accuracy">Mininum accuracy</string>
    <string name="pref_default_minumum_accuracy">15</string>
    <string name="pref_title_kalman_speed">Kalman filter for speed - noise</string>
    <string name="pref_default_kalman_speed">1.0</string>
    <string name="pref_title_range_min">Graph min bound</string>
    <string name="pref_default_range_min">0</string>
    <string name="pref_title_range_max">Graph max bound</string>
    <string name="pref_default_range_max">50</string>
    <string name="pref_header_maps">Maps</string>
    <string name="pref_title_map_zoom_main">Default zoom for main map activity</string>
    <string name="pref_default_map_zoom_main">15</string>
    <string name="pref_title_map_zoom_trace">Default zoom for trace map activity</string>
    <string name="pref_default_map_zoom_trace">15</string>
</resources>
