<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_map_zoom_main"
        android:inputType="number"
        android:key="map_zoom_main"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_map_zoom_main" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_map_zoom_trace"
        android:inputType="number"
        android:key="map_zoom_trace"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_map_zoom_trace" />

</PreferenceScreen>
